# distributed-cloud-gaming-pipeline

./: README.md  docker-compose.yml
gstreamer-live-streaming/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  gstreamer-cheatsheet.md  install.sh  media-live-streamer.c  webRTC-streamer.c
gstreamer-live-streaming/cmake-modules/: FindGlib.cmake  FindGstreamer.cmake  FindJsonGlib.cmake  FindLibSoup2.cmake
headless-renderer/: CMakeLists.txt  Dockerfile  README.md  main  main.cpp
headless-renderer/cmake-modules/: FindGstreamermm.cmake
headless-renderer/constants/: Enums.h  Enums.hpp  Maps.h  Maps.hpp  Structs.h  Structs.hpp  Types.hpp  Values.h  Values.hpp
headless-renderer/constants/structs/: CameraParams.hpp  FrameParams.hpp  GameObjectParams.hpp  Input.hpp  Material.hpp
headless-renderer/graphics/: CMakeLists.txt  Camera.cpp  ContextEGL.cpp  ContextEGL.h  ContextEGL.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.h  Model.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp
headless-renderer/graphics/constants/: Structs.h
headless-renderer/networking-middleware/: IServer.hpp  MSSClient.cpp  MSSClient.hpp  MSSServer.cpp  MSSServer.hpp  MSteamSockets.hpp
headless-renderer/shaders/: f_gouraud.glsl  f_normal_map.glsl  f_phong.glsl  f_texture.glsl  f_texture_phong.glsl  f_wave.glsl  v_blinn.glsl  v_gouraud.glsl  v_normal_map.glsl  v_phong.glsl  v_reflection.glsl  v_toon.glsl  v_wave.glsl
headless-renderer/src/: Buddha.cpp  Buddha.h  CMakeLists.txt  Dragon.cpp  Dragon.h  GstRawFramesApp.cpp  GstRawFramesApp.h  RawFramesApp.cpp  RawFramesApp.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  renderer.cpp  state.cpp
headless-renderer/src/renderer/: Dragon.cpp  Dragon.h  Dragon.hpp  GstRawFramesApp.cpp  GstRawFramesApp.h  GstRawFramesApp.hpp  RawFramesApp.cpp  RawFramesApp.h  renderer.cpp
headless-renderer/src/state/: GODragon.cpp  GODragon.h  GODragon.hpp  state.cpp
headless-renderer/state/: Camera.cpp  Camera.h  GODragon.cpp  GODragon.h  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  GameObject.hpp  GameScene.cpp  GameScene.h  GameScene.hpp  InputHandler.h  InputHandler.hpp  Light.hpp  StateMain.cpp
headless-renderer/utils/: FileHandler.h  LogUtils.hpp  glLogUtils.h  gstLogUtils.h  gstLogUtils.hpp
openGL-offscreen-rendering/headless-renderer/: CMakeLists.txt  Dragon.cpp  Dragon.h  FileHandler.h  GstRawFramesApp.cpp  GstRawFramesApp.h  Light.h  LogUtils.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Render.cpp  Render.h  ShaderMaker.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
openGL-offscreen-rendering/headless-renderer/cmake-modules/: FindGstreamermm.cmake
openGL-offscreen-rendering/headless-renderer/constants/: Enums.h  Maps.h
openGL-offscreen-rendering/headless-renderer/graphics/: CMakeLists.txt  Camera.cpp  Camera.h  ContextEGL.cpp  ContextEGL.h  Makefile  Mesh.cpp  Mesh.h  Model.h  ShaderProgram.h  cmake_install.cmake  glLogUtils.h
openGL-offscreen-rendering/headless-renderer/graphics/constants/: Maps.h
openGL-offscreen-rendering/headless-renderer/shaders/: f_blinn.glsl  f_gouraud.glsl  f_passthrough.glsl  f_phong.glsl  f_reflection.glsl  f_refraction.glsl  f_skybox.glsl  f_toon.glsl  v_passthrough.glsl  v_phong.glsl  v_refraction.glsl  v_skybox_advanced.glsl  v_texture.glsl  v_texture_phong.glsl
openGL-offscreen-rendering/headless-renderer/src/: Dragon.h  GstRawFramesApp.h  Render.cpp
openGL-offscreen-rendering/headless-renderer/utils/: glLogUtils.h  gstLogUtils.h
openGL-offscreen-rendering/simple-test-egl-offscreen-rendering/: CMakeLists.txt  Errors.h  Render.cpp  Render.h  ShaderMaker.cpp  ShaderMaker.h  camera.h  main.cpp  vertexShader_C.glsl
